--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="profile-image">
                         <img src="https://i.ibb.co/JHjYgmv/profile.png" alt="Ryan Adlard">
                     </div>
-                    <h1 class="profile-name" id="nombre">Ryan Adlard</h1>
+                    <h1 class="profile-name" id="nombre">Yoni Chesla</h1>
                     <h2 class="profile-profession">Web Designer</h2>
                     <div class="profile-social" id="profile-social">
                         <a href="www.dribbble.com" class="fab fa-dribbble"></a>
