--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           rel="stylesheet" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
           crossorigin="anonymous" />
-      <!-- <link rel="stylesheet" href="style.css" /> -->
+      <!-- <link rel="stylesheet" href="styles.css" /> -->
       <link rel="shortcut icon" href="./favicon.ico">
   </head>
 
