--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
                 <article class="about-aboutMe">
                     <h3 class="title">About Me</h3>
                     <div class="line-left">
-                        <p>I am Ryan Adlard, web designer from USA, California. I have rich experience in web site
-                            design
-                            and
-                            building and customization, also I am good at wordpress. I love to talk with you about our
-                            unique.</p>
+                        <p>I am Yoni Chesla, Experienced professional with a background of more than three years in software quality assurance engineering. Proficient in crafting and implementing software test plans to uncover software issues and determine their origins. Fluent in both English and Hebrew and characterized by a robust creative drive.</p>
                         <div>
                             <div>
                                 <span>AGE . . . . </span>24
