--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kelly Chen's Resume</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="resume">
@@ -60,5 +60,6 @@
         <!-- Functionality like work experience, education, skills, etc. -->
     </div>
 </div>
+<script src="script.js" defer></script>
 </body>
 </html>
