--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <div class="profile-background"></div>
                 <div>
                     <div class="profile-image">
-                        <img src="https://i.ibb.co/JHjYgmv/profile.png" alt="Ryan Adlard">
+                        <img src="https://i.ibb.co/wpWpmNb/yoni-Photo.jpg" alt="Yoni Chesla">
                     </div>
                     <h1 class="profile-name" id="nombre">Yoni Chesla</h1>
-                    <h2 class="profile-profession">Web Designer</h2>
+                    <h2 class="profile-profession">QA Engineer</h2>
                     <div class="profile-social" id="profile-social">
                         <a href="www.dribbble.com" class="fab fa-dribbble"></a>
                         <a href="www.twitter.com" class="fab fa-twitter"></a>
